syntax = "proto3";

package protocol;

option go_package = "github.com/Maruqes/512SvMan/api/proto/protocol;proto";


// Servidor do MASTER
service ProtocolService {
  rpc SetConnection(SetConnectionRequest) returns (SetConnectionResponse);
  rpc Notify(NotifyRequest) returns (NotifyResponse);
}

// Servidor do CLIENTE
service ClientService {
  rpc Notify(NotifyRequest) returns (NotifyResponse);
}

message SetConnectionRequest { string machineName = 1; string addr = 2; }
message SetConnectionResponse { string ok = 1; }

message NotifyRequest { string text = 1; }
message NotifyResponse { string ok = 1; }
